--- a/styles/titles.css
+++ b/styles/titles.css
@@ -78,3 +78,22 @@
   text-align: center;
   font-size: 1rem;
 }
+
+/* News Cards */
+.news-cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 15px;
+  margin: 70px 0;
+}
+
+.news-cards img {
+  width: 100px;
+  height: 100px;
+}
+
+.news-cards h3 {
+  border: 2px solid black;
+  font-size: 20px;
+  margin: 10px 0;
+}
